2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        http://trac.webkit.org/changeset/50811 removed some methods from
        platform/network/SocketStreamHandleClient.h, so remove them
        here too.

        https://bugs.webkit.org/show_bug.cgi?id=31360

        * public/WebSocketStreamHandleClient.h:
        * src/SocketStreamHandle.cpp:
        (WebCore::SocketStreamHandleInternal::send):

2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Eric Seidel.

        Remove some additional references to dragSourceMovedTo() not
        needed after http://trac.webkit.org/changeset/50786.

        https://bugs.webkit.org/show_bug.cgi?id=31354

        * public/WebView.h:
        * src/WebViewImpl.h:

2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        Remove WebViewImpl::dragSourceMovedTo(), as it is no longer
        needed after http://trac.webkit.org/changeset/50786.

        https://bugs.webkit.org/show_bug.cgi?id=31354

        * src/WebViewImpl.cpp:

2009-11-10  Nate Chapin  <japhet@chromium.org>

        Unreviewed, Chromium build fix for http://trac.webkit.org/changeset/50760.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::paint):

2009-11-10  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Dimitri Glazkov.

        Modified WebKit.gyp to build the webkit api.

        https://bugs.webkit.org/show_bug.cgi?id=31320

        * README: Added.
        * WebKit.gyp: Added.
        * webkit.gyp: Removed.

2009-11-10  Nate Chapin  <japhet@chromium.org>

        Reviewed by Eric Seidel.

        Update references to Canvas 3D classes to use the WebGL prefix
        introduced in http://trac.webkit.org/changeset/50725.

        https://bugs.webkit.org/show_bug.cgi?id=31276

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3DInternal::beginPaint):
        (WebCore::GraphicsContext3DInternal::bindBuffer):